--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -127,7 +127,7 @@
       <div class="col-lg-6 ml-auto">
         <div class="site-contact-form">
           <h4>TELL US ABOUT YOUR INFORMATION</h4>
-          <form id="contact-form" action="https://formspree.io/f/minorin@studio-mizutama.net" method="POST">
+          <form id="contact-form" netlify>
             <div class="row">
               
               <div class="col-lg-6">
@@ -138,10 +138,9 @@
               </div>
               
               <div class="col-12">
-                <textarea class="form-control" id="aboutProject" name="about-project" rows="6" placeholder="Inquiry Details"></textarea>
+                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Inquiry Details"></textarea>
               </div>
               <div class="col-12">
-                <input type="hidden" name="_next" value="https://studio-mizutama.net/" />
                 <button type="submit" class="btn btn-primary" id="contact-form-button">
                   <span class="btn-area">
                     <span data-text="Send Message">
