--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -131,14 +131,14 @@
             <div class="row">
               
               <div class="col-lg-6">
-                <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                <input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
               </div>
               <div class="col-lg-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Email">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
               </div>
               
               <div class="col-12">
-                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Inquiry Details"></textarea>
+                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Inquiry Details" required></textarea>
               </div>
               <div class="col-12">
                 <button type="submit" class="btn btn-primary" id="contact-form-button">
