--- a/public/works/with-you/index.html
+++ b/public/works/with-you/index.html
@@ -137,7 +137,7 @@ The story  takes place in Sapporo, the north city in Japan, famous for its beaut
 <p>The heroine of the story, disappointed to her future and hope to die with his boyfriend Yuki.</p>
 <h4 id="yuki">Yuki</h4>
 <p><img src="/images/works/yuki.png" alt="yuki"></p>
-<p>Haruna&rsquo;s boyfriend. Takes her to the trip to Sapporo for changing her mind and live together wit her, but does not tell the purpose to her.</p>
+<p>Haruna&rsquo;s boyfriend. Takes her to the trip to Sapporo for changing her mind and live together, without telling her his purpose.</p>
 <h3 id="members">Members</h3>
 <h4 id="voice-actors">Voice Actors</h4>
 <ul>
