--- a/public/index.html
+++ b/public/index.html
@@ -125,9 +125,9 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <div class="site-hero-content text-center">
-            <h6>WE WORK HARD, WE PLAY HARD</h6>
+            <h6></h6>
             <h1>
-              Animation Studio With Volunteers on the Internet
+              Online Animation Studio
             </h1>
             <ul class="site-hero-content-buttons">
               <li>
