--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
         <div class="col-12">
           <div class="section-title">
             <h2>OUR RECENT WORKS</h2>
-            <p>We are making short animation movies and applications for animation production efficiency.</p>
+            <p>We are making original animes and apps for anime creators.</p>
           </div>
         </div>
         
@@ -223,7 +223,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1 class="site-cta-title">LET’S WORK TOGETHER</h1>
-          <p style="margin-bottom: 8ex;">We are looking for new members. Please contact us if you are interested.</p>
+          <p style="margin-bottom: 8ex;">We are looking for new members. Feel free to contact us.</p>
           <ul class="site-cta-buttons">
             <li>
               <a href="https://studio-mizutama.net/works" class="btn btn-secondary">
@@ -308,7 +308,7 @@
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">Our Activities</h5>
           <p class="site-footer-widget-description">
-            Animation & Motion Graphics<br>UI & UX Design<br>Application Development<br>IT Infrastructure Construction
+            Animation & Motion Graphics<br>UI & UX Design<br>Application Development
           </p>
         </div>
       </div>
