--- a/public/works/index.html
+++ b/public/works/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8" />
-  <title>We are making short &lt;span&gt;animation&lt;/span&gt; movies and &lt;span&gt;applications&lt;/span&gt; for animation production efficiency</title>
+  <title>We are making original &lt;span&gt;animes&lt;/span&gt; and &lt;span&gt;apps&lt;/span&gt; for anime creators.</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,11 +24,11 @@
   
   
   <meta property="og:site_name"           content="Studio Mizutama Official Site">
-  <meta property="og:title"               content="We are making short &lt;span&gt;animation&lt;/span&gt; movies and &lt;span&gt;applications&lt;/span&gt; for animation production efficiency">
+  <meta property="og:title"               content="We are making original &lt;span&gt;animes&lt;/span&gt; and &lt;span&gt;apps&lt;/span&gt; for anime creators.">
   <meta property="og:url"                 content="https://studio-mizutama.net/works/">
   <meta property="og:type"                content="website">
   <meta name="twitter:card"               content="summary_large_image">
-  <meta property="twitter:title"          content="We are making short &lt;span&gt;animation&lt;/span&gt; movies and &lt;span&gt;applications&lt;/span&gt; for animation production efficiency">
+  <meta property="twitter:title"          content="We are making original &lt;span&gt;animes&lt;/span&gt; and &lt;span&gt;apps&lt;/span&gt; for anime creators.">
   
   <meta property="og:image"       content="https://studio-mizutama.net/images/card.png">
   <meta property="og:image:url"   content="https://studio-mizutama.net/images/card.png">
@@ -123,7 +123,7 @@
       <div class="col-lg-8">
         <div class="site-project-header-content">
           <h1>
-            We are making short <span>animation</span> movies and <span>applications</span> for animation production efficiency
+            We are making original <span>animes</span> and <span>apps</span> for anime creators.
           </h1>
         </div>
       </div>
@@ -185,7 +185,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1 class="site-cta-title">LET’S WORK TOGETHER</h1>
-          <p style="margin-bottom: 8ex;">We are looking for new members. Please contact us if you are interested.</p>
+          <p style="margin-bottom: 8ex;">We are looking for new members. Feel free to contact us.</p>
           <ul class="site-cta-buttons">
             <li>
               <a href="https://studio-mizutama.net/works" class="btn btn-secondary">
@@ -270,7 +270,7 @@
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">Our Activities</h5>
           <p class="site-footer-widget-description">
-            Animation & Motion Graphics<br>UI & UX Design<br>Application Development<br>IT Infrastructure Construction
+            Animation & Motion Graphics<br>UI & UX Design<br>Application Development
           </p>
         </div>
       </div>
