--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -121,12 +121,12 @@
     <div class="row">
       <div class="col-lg-5">
         <h1 class="site-contact-title">
-          Please feel free to <span>contact us.</span>
+          Feel free to <span>contact us.</span>
         </h1>
       </div>
       <div class="col-lg-6 ml-auto">
         <div class="site-contact-form">
-          <h4>TELL US ABOUT YOUR INFORMATION</h4>
+          <h4></h4>
           <form id="contact-form" netlify>
             <div class="row">
               
@@ -138,13 +138,13 @@
               </div>
               
               <div class="col-12">
-                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Inquiry Details" required></textarea>
+                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Details" required></textarea>
               </div>
               <div class="col-12">
                 <button type="submit" class="btn btn-primary" id="contact-form-button">
                   <span class="btn-area">
-                    <span data-text="Send Message">
-                      Send Message
+                    <span data-text="Send">
+                      Send
                     </span>
                   </span>
                 </button>
@@ -214,7 +214,7 @@
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">Our Activities</h5>
           <p class="site-footer-widget-description">
-            Animation & Motion Graphics<br>UI & UX Design<br>Application Development<br>IT Infrastructure Construction
+            Animation & Motion Graphics<br>UI & UX Design<br>Application Development
           </p>
         </div>
       </div>
