--- a/public/works/with-you/index.html
+++ b/public/works/with-you/index.html
@@ -214,7 +214,7 @@ The story  takes place in Sapporo, the north city in Japan, famous for its beaut
       <div class="row">
         <div class="col-12 text-center">
           <h1 class="site-cta-title">LET’S WORK TOGETHER</h1>
-          <p style="margin-bottom: 8ex;">We are looking for new members. Please contact us if you are interested.</p>
+          <p style="margin-bottom: 8ex;">We are looking for new members. Feel free to contact us.</p>
           <ul class="site-cta-buttons">
             <li>
               <a href="https://studio-mizutama.net/works" class="btn btn-secondary">
@@ -299,7 +299,7 @@ The story  takes place in Sapporo, the north city in Japan, famous for its beaut
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">Our Activities</h5>
           <p class="site-footer-widget-description">
-            Animation & Motion Graphics<br>UI & UX Design<br>Application Development<br>IT Infrastructure Construction
+            Animation & Motion Graphics<br>UI & UX Design<br>Application Development
           </p>
         </div>
       </div>
