--- a/public/about/index.html
+++ b/public/about/index.html
@@ -30,8 +30,8 @@
   <meta name="twitter:card"               content="summary_large_image">
   <meta property="twitter:title"          content="About Us">
   
-  <meta property="og:description"         content="This project launched from one topic in internet BBS on February of 2020. Minorin, the director of this project started working by herself but gradually the volunteers raised their hands to contribute the work. After several months,  there was a team consists 7 staffs.">
-  <meta property="twitter:description"    content="This project launched from one topic in internet BBS on February of 2020. Minorin, the director of this project started working by herself but gradually the volunteers raised their hands to contribute the work. After several months,  there was a team consists 7 staffs.">
+  <meta property="og:description"         content="An independent team making original animes and apps for anime creators.">
+  <meta property="twitter:description"    content="An independent team making original animes and apps for anime creators.">
   
   <meta property="og:image"       content="https://studio-mizutama.net/images/card.png">
   <meta property="og:image:url"   content="https://studio-mizutama.net/images/card.png">
@@ -127,12 +127,12 @@
         <div class="site-about-wrapper">
           <div class="site-about-company">
             <h1>
-              We are making original animes and apps for anime creators.
+              What is Studio Mizutama?
             </h1>
           </div>
           <div class="site-about-description">
             <p>
-              This project launched from one topic in internet BBS on February of 2020. Minorin, the director of this project started working by herself but gradually the volunteers raised their hands to contribute the work. After several months,  there was a team consists 7 staffs.
+              An independent team making original animes and apps for anime creators.
             </p>
           </div>
         </div>
