--- a/public/works/index.html
+++ b/public/works/index.html
@@ -147,7 +147,7 @@
             <img src="https://studio-mizutama.net/images/works/keyvisual.png" alt="project-thumb">
           </div>
           <div class="site-project-item-content">
-            <span>ANIMATION MOVIE</span>
+            <span>ANIMATION</span>
             <h3>WITH YOU</h3>
             <a href="https://studio-mizutama.net/works/with-you/" class="read-more">view project</a>
           </div>
